html on index page added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,177 @@
 </html>
 
 <body>
-  <header></header>
-  <main>This is a test</main>
-  <footer></footer>
+  <header>
+    <figure class="logo"></figure>
+    <nav aria-label="icons">
+      <ul>
+        <li>
+          <a href=""><figure></figure></a>
+        </li>
+        <li>
+          <a href=""><figure></figure></a>
+        </li>
+        <li>
+          <a href=""><figure></figure></a>
+        </li>
+      </ul>
+    </nav>
+    <nav aria-label="menu">
+      <ul class="menu">
+        <li>
+          <label class="hamburger-label" for="hamburger-menu"
+            ><i class="fa fa-bars"></i
+          ></label>
+          <input type="checkbox" id="hamburger-menu" />
+          <div class="mobile-menu">
+            <a href="exhibitions.html">EXHIBITIONS</a>
+            <a href="explore.html">EXPLORE</a>
+            <a href="get_involved.html">GET INVOLVED</a>
+            <a href="visit.html">VISIT</a>
+          </div>
+        </li>
+        <li>MENU</li>
+        <li><a href="exhibitions.html">EXHIBITIONS</a></li>
+        <li><a href="explore.html">EXPLORE</a></li>
+        <li><a href="get_involved.html">GET INVOLVED</a></li>
+        <li><a href="visit.html">VISIT</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <div class="main-wrapper">
+      <section class="main-content">
+        <h1>EXPLORE 1000+ EXHIBITIONS</h1>
+        <h2>entrance is FREE FOR ALL</h2>
+        <h2>GUIDED TOUR starting every hour</h2>
+        <i class="fa fa-clock"></i>
+        <p>Open Today Until 16:00</p>
+        <div class="button-container">
+          <a href="www.ticketmaster.com"></a>
+          <p class="button">BUY TICKETS</p>
+        </div>
+        <p>Guided Tour 70 NOK per Person</p>
+        <p>Online Tickets Provided by:</p>
+        <figure>
+          <img
+            src="images\icons\Ticketmaster-Logo-White.svg"
+            alt="Ticketmaster logo"
+          />
+        </figure>
+      </section>
+      <aside>
+        <div class="bubble">
+          <h3>"Let us Explore Together"</h3>
+          <p>Learn more ABOUT US and our VISION</p>
+          <i class="fa fa-arrow-circle-right"></i>
+        </div>
+      </aside>
+      <section class="categories">
+        <div class="color-box">
+          <figure><ion-icon ios="ios-planet" md="md-planet"></ion-icon></figure>
+          <h4>COSMOLOGY</h4>
+        </div>
+        <div class="color-box">
+          <figure><i class="fa fa-dna"></i></figure>
+          <h4>EVOLUTION</h4>
+        </div>
+        <div class="color-box">
+          <figure><i class="fa fa-microscope"></i></figure>
+          <h4>BIOLOGY & MEDICINE</h4>
+        </div>
+        <div class="color-box">
+          <figure><i class="fa fa-robot"></i></figure>
+          <h4>ROBOTICS & AI</h4>
+        </div>
+        <div class="color-box">
+          <figure><i class="fa fa-globe-americas"></i></figure>
+          <h4>ECOLOGY</h4>
+        </div>
+        <div class="color-box">
+          <figure><i class="fa fa-rocket"></i></figure>
+          <h4>SPECIAL EVENTS</h4>
+        </div>
+      </section>
+      <div class="secondary-container">
+        <section class="news">
+          <h5>NEWS: Special Events and Exhibitions</h5>
+          <figure><img src="" alt="" /></figure>
+          <div class="description"></div>
+          <h6>Night in the Museum</h6>
+          <p>
+            Get your family together for an exciting night in the museum as you
+            sleep over beside dinosaurs and science displays.
+          </p>
+          <p>
+            Bring your own sleeping bag and get ready to rough it as we go
+            exploring the wonders of science.
+          </p>
+        </section>
+        <section class="clubs">
+          <h5>Join One of our Children Clubs</h5>
+          <figure><img src="" alt="" /></figure>
+          <figure><img src="" alt="" /></figure>
+        </section>
+        <section class="newsletter">
+          <p>
+            Sign up to our Newsletter and be the first to know about Our
+            exciting New stuff:
+          </p>
+          <form action="form-success.php" method="get" class="newsletter">
+            <input
+              id="newsletter"
+              type="text"
+              name="email"
+              placeholder="YOUR EMAIL"
+            />
+            <input id="join" type="submit" name="subscribe" value="SIGN UP" />
+          </form>
+        </section>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="footer-wrapper">
+      <div class="footer-container">
+        <h6>CONNECT:</h6>
+        <ul>
+          <li><i fa fa-facebook-f></i></li>
+          <li><i fa fa-instagram></i></li>
+          <li><i fa fa-youtube></i></li>
+          <li><i fa fa-twitter></i></li>
+        </ul>
+      </div>
+      <div class="footer-container">
+        <h6>HOURS:</h6>
+        <ul>
+          <li>Monday:</li>
+          <li>Tuesday:</li>
+          <li>Wednesday:</li>
+          <li>Thursday:</li>
+          <li>Friday:</li>
+          <li>Saturday:</li>
+          <li>Sunday:</li>
+        </ul>
+      </div>
+      <div class="footer-container">
+        <h6>LOCATION:</h6>
+        <p>Nygårdsgaten 112</p>
+        <p>5008 Bergen, Norway</p>
+        <a href=""
+          ><i class="fa fa-map-marker-alt"><p>Getting Here</p></i></a
+        >
+      </div>
+      <div class="footer-container">
+        <h6>CONTACT & SUPPORT:</h6>
+        <ul>
+          <a href="">About Us</a>
+          <a href="">Facilities</a>
+          <p>Email: contact@cms.com</p>
+          <p>Phone: 500 55 555</p>
+          <p>Community Science Museum 2020</p>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
