html added on rest of the pages

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -9,15 +9,196 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
     <link rel="stylesheet" href="styles/home.css" />
-    <script>
-      src = "https://kit.fontawesome.com/fbd3401b24.js";
-      crossorigin = "anonymous";
-    </script>
+    <script
+      src="https://kit.fontawesome.com/fbd3401b24.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-</html>
 
-<body>
-  <header></header>
-  <main></main>
-  <footer></footer>
-</body>
+  <body>
+    <header></header>
+    <main>
+      <div class="main-wrapper">
+        <section class="main-content">
+          <h1>
+            Our More Than 1000 Different Exhibits Are Divided Between 5 Spaces
+          </h1>
+          <div class="card">
+            <h2>COSMOLOGY</h2>
+            <span class="fa fa-"></span>
+            <p>
+              Explore the wonders of our cosmos. Our fantastic exhibition, ‘The
+              Sky Above Us’, explores the night sky and what we can see and know
+              about the universe around us. We’ll locate the various
+              constellations and galaxies that can be seen and learn a bit about
+              the early navigators who used the stars to travel by.
+            </p>
+            <p>
+              Follow the journey of our solar exploration: from early Arab
+              traders, to Galileo’s telescope, to the latest exploration of the
+              planets in our solar system.
+            </p>
+          </div>
+          <span class="fa fa-arrow-circle-right"></span>
+          <figure class="card">
+            <img src="images\cosmology.jpg" alt="" />
+          </figure>
+          <div class="card">
+            <h2>EVOLUTION</h2>
+            <span class="fa fa-dna"></span>
+            <p>
+              For centuries, philosophers and scientists have wrestled with the
+              question of our origins. Where do we come from and how did we get
+              here? Since Darwin proposed his theory of evolution we have had a
+              framework for exploring and understanding our place in this world.
+            </p>
+            <p>
+              Discover the origins of life on this planet and how the species we
+              know today have evolved our time. You can also take some time to
+              meet a few of the creatures who didn’t survive, including our
+              Woolly Mammoth, the Dodos, and a number of dinosaurs too.
+            </p>
+          </div>
+          <span class="fa fa-arrow-circle-left"></span>
+          <figure class="card">
+            <img src="images\evolution.jpg" alt="" />
+          </figure>
+          <div class="card">
+            <h2>BIOLOGY & MEDICINE</h2>
+            <span class="fa fa-microscope"></span>
+            <p>
+              From micro-organisms to the human body, major breakthroughs in
+              biology are offering us unique insights into the great wonders of
+              the tiny world.
+            </p>
+            <p>
+              For many people their life expectancy is much longer and their
+              quality of life much improved, thanks to the growth of our
+              understanding of medicine. Over a series of exhibits we explore
+              the history of medicine and take a look at some major
+              breakthroughs including the discovery of penicillin and the first
+              heart transplant.
+            </p>
+          </div>
+          <span class="fa fa-arrow-circle-right"></span>
+          <figure class="card"><img src="images\biology.jpg" alt="" /></figure>
+          <div class="card">
+            <h2>ROBOTICS & AI</h2>
+            <span class="fa fa-robot"></span>
+            <p>
+              The information revolution is here and robotics and artificial
+              intelligence are the science of the future.
+            </p>
+            <p>
+              From useful home applications of AI to industrial uses of
+              robotics, the future is here. You can even say hello and shake the
+              hand of Rob the Robot.
+            </p>
+          </div>
+          <figure class="card"><img src="images\robotics.jpg" alt="" /></figure>
+          <span class="fa fa-arrow-circle-left"></span>
+          <div class="card">
+            <h2>ECOLOGY</h2>
+            <span class="fa fa-globe-americas"></span>
+            <p>
+              As we learn more and more of the impact humans are having on the
+              planet, the more important it becomes that scientists explore how
+              to create a sustainable future not just for humans but for the
+              whole planet.
+            </p>
+          </div>
+          <span class="fa fa-arrow-circle-left"></span>
+          <figure class="card"><img src="images\ecology.jpg" alt="" /></figure>
+        </section>
+        <section class="photo-gallery">
+          <h3>Come Visit Us and Continoue Your Exploration</h3>
+          <figure><img src="" alt="" /></figure>
+          <figure><img src="" alt="" /></figure>
+          <figure><img src="" alt="" /></figure>
+          <figure><img src="" alt="" /></figure>
+          <figure><img src="" alt="" /></figure>
+          <figure><img src="" alt="" /></figure>
+        </section>
+        <section class="newsletter">
+          <p>
+            Sign up to our Newsletter and be the first to know about Our
+            exciting New stuff:
+          </p>
+          <form action="form-success.php" method="get" class="newsletter">
+            <input
+              id="newsletter"
+              type="text"
+              name="email"
+              placeholder="YOUR EMAIL"
+            />
+            <input id="join" type="submit" name="subscribe" value="SIGN UP" />
+          </form>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-container">
+          <h6>CONNECT:</h6>
+          <ul>
+            <li>
+              <a href="www.facebook.com"
+                ><span class="fa fa-facebook-f"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.instagram.com"
+                ><span class="fa fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+            </li>
+            <li>
+              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>HOURS:</h6>
+          <ul>
+            <li>Monday:</li>
+            <li>Tuesday:</li>
+            <li>Wednesday:</li>
+            <li>Thursday:</li>
+            <li>Friday:</li>
+            <li>Saturday:</li>
+            <li>Sunday:</li>
+          </ul>
+          <ul>
+            <li>Closed</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 19:00</li>
+            <li>09:00 - 16:00</li>
+            <li>09:00 - 13:00</li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>LOCATION:</h6>
+          <p>Nygårdsgaten 112</p>
+          <p>5008 Bergen, Norway</p>
+          <a href="visit.html"
+            ><span class="fa fa-map-marker-alt"><p>Getting Here</p></span></a
+          >
+        </div>
+        <div class="footer-container">
+          <h6>CONTACT & SUPPORT:</h6>
+          <ul>
+            <a href="about_us.html">About Us</a>
+            <a href="visit.html">Facilities</a>
+            <p>Email: contact@cms.com</p>
+            <p>Phone: 500 55 555</p>
+            <p>Community Science Museum 2020</p>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
