--- a/explore.html
+++ b/explore.html
@@ -14,10 +14,160 @@
       crossorigin = "anonymous";
     </script>
   </head>
-</html>
 
-<body>
-  <header></header>
-  <main></main>
-  <footer></footer>
-</body>
+  <body>
+    <header></header>
+
+    <main>
+      <div class="main-wrapper">
+        <h1>More To Explore</h1>
+        <section class="for-kids">
+          <div>
+            <h2>For Kids</h2>
+            <p>
+              Are you a young person looking to learn more about science? Come
+              on down to our museum, there’s plenty to see and do.
+            </p>
+            <p>
+              You can learn about Newtonian physics from our bumper swing, or
+              why not travel back in time and meet our resident Woolly Mammoth?
+              Our exhibits are designed to be accessible for interested minds,
+              so make sure you come ready to learn and explore.
+            </p>
+          </div>
+          <div>
+            <h5>Join a Childrens Club</h5>
+            <p>
+              We also have the Young Stars Club which meets once a week on a
+              Saturday between 10:00 and 13:00 where you’ll get to explore and
+              experiment with our team of experts.
+            </p>
+            <p>
+              During the school holidays we run The Holiday Club where you can
+              join other children your age to go on a journey of discovery. Each
+              holiday we pick a new theme to explore. To find out more about the
+              holiday club and how you can join, send us a message.
+            </p>
+          </div>
+          <div class="get-in-touch">
+            <h3>Want to join one of our clubs?</h3>
+            <a href=""><p>GET IN TOUCH</p></a>
+          </div>
+        </section>
+        <section class="for-adults">
+          <div>
+            <h3>For Teachers</h3>
+            <p>
+              Are you a young person looking to learn more about science? Come
+              on down to our museum, there’s plenty to see and do.
+            </p>
+            <p>
+              You can learn about Newtonian physics from our bumper swing, or
+              why not travel back in time and meet our resident Woolly Mammoth?
+              Our exhibits are designed to be accessible for interested minds,
+              so make sure you come ready to learn and explore.
+            </p>
+          </div>
+          <div>
+            <h3>For Researchers</h3>
+            <p>
+              We also have the Young Stars Club which meets once a week on a
+              Saturday between 10:00 and 13:00 where you’ll get to explore and
+              experiment with our team of experts.
+            </p>
+            <p>
+              During the school holidays we run The Holiday Club where you can
+              join other children your age to go on a journey of discovery. Each
+              holiday we pick a new theme to explore. To find out more about the
+              holiday club and how you can join, send us a message.
+            </p>
+          </div>
+          <div class="get-in-touch">
+            <h4>Are you a Teacher or a Resercher?</h4>
+            <a href=""><p>GET IN TOUCH</p></a>
+          </div>
+        </section>
+      </div>
+      <section class="newsletter">
+        <p>
+          Sign up to our Newsletter and be the first to know about Our exciting
+          New stuff:
+        </p>
+        <form action="form-success.php" method="get" class="newsletter">
+          <input
+            id="newsletter"
+            type="text"
+            name="email"
+            placeholder="YOUR EMAIL"
+          />
+          <input id="join" type="submit" name="subscribe" value="SIGN UP" />
+        </form>
+      </section>
+    </main>
+
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-container">
+          <h6>CONNECT:</h6>
+          <ul>
+            <li>
+              <a href="www.facebook.com"
+                ><span class="fa fa-facebook-f"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.instagram.com"
+                ><span class="fa fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+            </li>
+            <li>
+              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>HOURS:</h6>
+          <ul>
+            <li>Monday:</li>
+            <li>Tuesday:</li>
+            <li>Wednesday:</li>
+            <li>Thursday:</li>
+            <li>Friday:</li>
+            <li>Saturday:</li>
+            <li>Sunday:</li>
+          </ul>
+          <ul>
+            <li>Closed</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 19:00</li>
+            <li>09:00 - 16:00</li>
+            <li>09:00 - 13:00</li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>LOCATION:</h6>
+          <p>Nygårdsgaten 112</p>
+          <p>5008 Bergen, Norway</p>
+          <a href="visit.html"
+            ><span class="fa fa-map-marker-alt"><p>Getting Here</p></span></a
+          >
+        </div>
+        <div class="footer-container">
+          <h6>CONTACT & SUPPORT:</h6>
+          <ul>
+            <a href="about_us.html">About Us</a>
+            <a href="visit.html">Facilities</a>
+            <p>Email: contact@cms.com</p>
+            <p>Phone: 500 55 555</p>
+            <p>Community Science Museum 2020</p>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
