--- a/index.html
+++ b/index.html
@@ -9,185 +9,261 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
     <link rel="stylesheet" href="styles/home.css" />
-    <script>
-      src = "https://kit.fontawesome.com/fbd3401b24.js";
-      crossorigin = "anonymous";
-    </script>
+    <script
+      src="https://kit.fontawesome.com/fbd3401b24.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-</html>
 
-<body>
-  <header>
-    <figure class="logo"></figure>
-    <nav aria-label="icons">
-      <ul>
-        <li>
-          <a href=""><figure></figure></a>
-        </li>
-        <li>
-          <a href=""><figure></figure></a>
-        </li>
-        <li>
-          <a href=""><figure></figure></a>
-        </li>
-      </ul>
-    </nav>
-    <nav aria-label="menu">
-      <ul class="menu">
-        <li>
-          <label class="hamburger-label" for="hamburger-menu"
-            ><i class="fa fa-bars"></i
-          ></label>
-          <input type="checkbox" id="hamburger-menu" />
-          <div class="mobile-menu">
-            <a href="exhibitions.html">EXHIBITIONS</a>
-            <a href="explore.html">EXPLORE</a>
-            <a href="get_involved.html">GET INVOLVED</a>
-            <a href="visit.html">VISIT</a>
+  <body>
+    <header>
+      <figure class="logo"></figure>
+      <nav aria-label="icons">
+        <ul>
+          <li>
+            <a href=""
+              ><figure><span class="fa fa-search"></span></figure
+            ></a>
+          </li>
+          <li>
+            <a href="www.ticketmaster.com"
+              ><figure><span class="fa fa-ticket-alt"></span></figure
+            ></a>
+          </li>
+          <li>
+            <a href=""
+              ><figure><span class="fa fa-user-circle"></span></figure
+            ></a>
+          </li>
+        </ul>
+      </nav>
+      <nav aria-label="menu">
+        <ul class="menu">
+          <li>
+            <label class="hamburger-label" for="hamburger-menu"
+              ><span class="fa fa-bars"></span
+            ></label>
+            <input type="checkbox" id="hamburger-menu" />
+            <ul class="mobile-menu">
+              <li><a href="exhibitions.html">EXHIBITIONS</a></li>
+              <li><a href="explore.html">EXPLORE</a></li>
+              <li><a href="get_involved.html">GET INVOLVED</a></li>
+              <li><a href="visit.html">VISIT</a></li>
+            </ul>
+          </li>
+          <li>MENU</li>
+          <li><a href="exhibitions.html">EXHIBITIONS</a></li>
+          <ul class="dropdown">
+            <p>Our Exhibition Spaces Include:</p>
+            <li>Cosmology</li>
+            <li>Evolution</li>
+            <li>Biology & Medicine</li>
+            <li>Robotics & AI</li>
+            <li>Ecology</li>
+          </ul>
+          <li><a href="explore.html">EXPLORE</a></li>
+          <ul class="dropdown">
+            <p>Learn more about what we can offer, wheter you are a:</p>
+            <li>Kid</li>
+            <li>Parent</li>
+            <li>Teacher</li>
+            <li>Researcher</li>
+          </ul>
+          <li><a href="get_involved.html">GET INVOLVED</a></li>
+          <ul class="dropdown">
+            <p>Learn about various ways you can support the museum:</p>
+            <li>Donations</li>
+            <li>Volunteering</li>
+            <li>Internships</li>
+          </ul>
+          <li><a href="visit.html">VISIT</a></li>
+          <ul class="dropdown">
+            <p>Information about:</p>
+            <li>Admission</li>
+            <li>Location</li>
+            <li>Hours</li>
+            <li>Accessibility</li>
+            <li>Food and Drink</li>
+            <li>Shop</li>
+          </ul>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <div class="main-wrapper">
+        <section class="main-content">
+          <h1>EXPLORE 1000+ EXHIBITIONS</h1>
+          <h2>entrance is FREE FOR ALL</h2>
+          <h2>GUIDED TOUR starting every hour</h2>
+          <span class="fa fa-clock"></span>
+          <p>Open Today Until 16:00</p>
+          <div class="button-container">
+            <a href="www.ticketmaster.com">
+              <p class="button">BUY TICKETS</p></a
+            >
           </div>
-        </li>
-        <li>MENU</li>
-        <li><a href="exhibitions.html">EXHIBITIONS</a></li>
-        <li><a href="explore.html">EXPLORE</a></li>
-        <li><a href="get_involved.html">GET INVOLVED</a></li>
-        <li><a href="visit.html">VISIT</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <div class="main-wrapper">
-      <section class="main-content">
-        <h1>EXPLORE 1000+ EXHIBITIONS</h1>
-        <h2>entrance is FREE FOR ALL</h2>
-        <h2>GUIDED TOUR starting every hour</h2>
-        <i class="fa fa-clock"></i>
-        <p>Open Today Until 16:00</p>
-        <div class="button-container">
-          <a href="www.ticketmaster.com"></a>
-          <p class="button">BUY TICKETS</p>
-        </div>
-        <p>Guided Tour 70 NOK per Person</p>
-        <p>Online Tickets Provided by:</p>
-        <figure>
-          <img
-            src="images\icons\Ticketmaster-Logo-White.svg"
-            alt="Ticketmaster logo"
-          />
-        </figure>
-      </section>
-      <aside>
-        <div class="bubble">
-          <h3>"Let us Explore Together"</h3>
-          <p>Learn more ABOUT US and our VISION</p>
-          <i class="fa fa-arrow-circle-right"></i>
-        </div>
-      </aside>
-      <section class="categories">
-        <div class="color-box">
-          <figure><ion-icon ios="ios-planet" md="md-planet"></ion-icon></figure>
-          <h4>COSMOLOGY</h4>
-        </div>
-        <div class="color-box">
-          <figure><i class="fa fa-dna"></i></figure>
-          <h4>EVOLUTION</h4>
-        </div>
-        <div class="color-box">
-          <figure><i class="fa fa-microscope"></i></figure>
-          <h4>BIOLOGY & MEDICINE</h4>
-        </div>
-        <div class="color-box">
-          <figure><i class="fa fa-robot"></i></figure>
-          <h4>ROBOTICS & AI</h4>
-        </div>
-        <div class="color-box">
-          <figure><i class="fa fa-globe-americas"></i></figure>
-          <h4>ECOLOGY</h4>
-        </div>
-        <div class="color-box">
-          <figure><i class="fa fa-rocket"></i></figure>
-          <h4>SPECIAL EVENTS</h4>
-        </div>
-      </section>
-      <div class="secondary-container">
-        <section class="news">
-          <h5>NEWS: Special Events and Exhibitions</h5>
-          <figure><img src="" alt="" /></figure>
-          <div class="description"></div>
-          <h6>Night in the Museum</h6>
-          <p>
-            Get your family together for an exciting night in the museum as you
-            sleep over beside dinosaurs and science displays.
-          </p>
-          <p>
-            Bring your own sleeping bag and get ready to rough it as we go
-            exploring the wonders of science.
-          </p>
-        </section>
-        <section class="clubs">
-          <h5>Join One of our Children Clubs</h5>
-          <figure><img src="" alt="" /></figure>
-          <figure><img src="" alt="" /></figure>
-        </section>
-        <section class="newsletter">
-          <p>
-            Sign up to our Newsletter and be the first to know about Our
-            exciting New stuff:
-          </p>
-          <form action="form-success.php" method="get" class="newsletter">
-            <input
-              id="newsletter"
-              type="text"
-              name="email"
-              placeholder="YOUR EMAIL"
+          <p>Guided Tour 70 NOK per Person</p>
+          <p>Online Tickets Provided by:</p>
+          <figure>
+            <img
+              src="images\icons\Ticketmaster-Logo-White.svg"
+              alt="Ticketmaster logo"
             />
-            <input id="join" type="submit" name="subscribe" value="SIGN UP" />
-          </form>
+          </figure>
         </section>
+        <aside>
+          <div class="bubble">
+            <h3>"Let us Explore Together"</h3>
+            <p>Learn more ABOUT US and our VISION</p>
+            <span class="fa fa-arrow-circle-right"></span>
+          </div>
+        </aside>
+        <section class="categories">
+          <div class="color-box">
+            <a href="exhibitions.html">
+              <figure>
+                <ion-icon ios="ios-planet" md="md-planet"></ion-icon>
+              </figure>
+              <h4>COSMOLOGY</h4></a
+            >
+          </div>
+          <div class="color-box">
+            <a href="exhibitions.html">
+              <figure><span class="fa fa-dna"></span></figure>
+              <h4>EVOLUTION</h4></a
+            >
+          </div>
+          <div class="color-box">
+            <a href="exhibitions.html">
+              <figure><span class="fa fa-microscope"></span></figure>
+              <h4>BIOLOGY & MEDICINE</h4></a
+            >
+          </div>
+          <div class="color-box">
+            <a href="exhibitions.html">
+              <figure><span class="fa fa-robot"></span></figure>
+              <h4>ROBOTICS & AI</h4></a
+            >
+          </div>
+          <div class="color-box">
+            <a href="exhibitions.html">
+              <figure><span class="fa fa-globe-americas"></span></figure>
+              <h4>ECOLOGY</h4></a
+            >
+          </div>
+          <div class="color-box">
+            <a href="exhibitions.html">
+              <figure><span class="fa fa-rocket"></span></figure>
+              <h4>SPECIAL EVENTS</h4></a
+            >
+          </div>
+        </section>
+        <div class="secondary-container">
+          <section class="news">
+            <h5>NEWS: Special Events and Exhibitions</h5>
+            <figure><img src="images\t-rex.jpg" alt="" /></figure>
+            <div class="description"></div>
+            <h6>Night in the Museum</h6>
+            <p>
+              Get your family together for an exciting night in the museum as
+              you sleep over beside dinosaurs and science displays.
+            </p>
+            <p>
+              Bring your own sleeping bag and get ready to rough it as we go
+              exploring the wonders of science.
+            </p>
+          </section>
+          <section class="clubs">
+            <h5>Join One of our Children Clubs</h5>
+            <figure>
+              <a href=""><img src="images\club_1.jpg" alt="" /></a>
+            </figure>
+            <figure>
+              <a href=""><img src="images\club_2.jpg" alt="" /></a>
+            </figure>
+          </section>
+          <section class="newsletter">
+            <p>
+              Sign up to our Newsletter and be the first to know about Our
+              exciting New stuff:
+            </p>
+            <form action="form-success.php" method="get" class="newsletter">
+              <input
+                id="newsletter"
+                type="text"
+                name="email"
+                placeholder="YOUR EMAIL"
+              />
+              <input id="join" type="submit" name="subscribe" value="SIGN UP" />
+            </form>
+          </section>
+        </div>
       </div>
-    </div>
-  </main>
-  <footer>
-    <div class="footer-wrapper">
-      <div class="footer-container">
-        <h6>CONNECT:</h6>
-        <ul>
-          <li><i fa fa-facebook-f></i></li>
-          <li><i fa fa-instagram></i></li>
-          <li><i fa fa-youtube></i></li>
-          <li><i fa fa-twitter></i></li>
-        </ul>
+    </main>
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-container">
+          <h6>CONNECT:</h6>
+          <ul>
+            <li>
+              <a href="www.facebook.com"
+                ><span class="fa fa-facebook-f"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.instagram.com"
+                ><span class="fa fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+            </li>
+            <li>
+              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>HOURS:</h6>
+          <ul>
+            <li>Monday:</li>
+            <li>Tuesday:</li>
+            <li>Wednesday:</li>
+            <li>Thursday:</li>
+            <li>Friday:</li>
+            <li>Saturday:</li>
+            <li>Sunday:</li>
+          </ul>
+          <ul>
+            <li>Closed</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 19:00</li>
+            <li>09:00 - 16:00</li>
+            <li>09:00 - 13:00</li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>LOCATION:</h6>
+          <p>Nygårdsgaten 112</p>
+          <p>5008 Bergen, Norway</p>
+          <a href="visit.html"
+            ><span class="fa fa-map-marker-alt"><p>Getting Here</p></span></a
+          >
+        </div>
+        <div class="footer-container">
+          <h6>CONTACT & SUPPORT:</h6>
+          <ul>
+            <a href="about_us.html">About Us</a>
+            <a href="visit.html">Facilities</a>
+            <p>Email: contact@cms.com</p>
+            <p>Phone: 500 55 555</p>
+            <p>Community Science Museum 2020</p>
+          </ul>
+        </div>
       </div>
-      <div class="footer-container">
-        <h6>HOURS:</h6>
-        <ul>
-          <li>Monday:</li>
-          <li>Tuesday:</li>
-          <li>Wednesday:</li>
-          <li>Thursday:</li>
-          <li>Friday:</li>
-          <li>Saturday:</li>
-          <li>Sunday:</li>
-        </ul>
-      </div>
-      <div class="footer-container">
-        <h6>LOCATION:</h6>
-        <p>Nygårdsgaten 112</p>
-        <p>5008 Bergen, Norway</p>
-        <a href=""
-          ><i class="fa fa-map-marker-alt"><p>Getting Here</p></i></a
-        >
-      </div>
-      <div class="footer-container">
-        <h6>CONTACT & SUPPORT:</h6>
-        <ul>
-          <a href="">About Us</a>
-          <a href="">Facilities</a>
-          <p>Email: contact@cms.com</p>
-          <p>Phone: 500 55 555</p>
-          <p>Community Science Museum 2020</p>
-        </ul>
-      </div>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
+</html>
