--- a/get_involved.html
+++ b/get_involved.html
@@ -9,15 +9,151 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
     <link rel="stylesheet" href="styles/home.css" />
-    <script>
-      src = "https://kit.fontawesome.com/fbd3401b24.js";
-      crossorigin = "anonymous";
-    </script>
+    <script
+      src="https://kit.fontawesome.com/fbd3401b24.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-</html>
 
-<body>
-  <header></header>
-  <main></main>
-  <footer></footer>
-</body>
+  <body>
+    <header></header>
+
+    <main>
+      <div class="main-wrapper">
+        <section>
+          <div class="support">
+            <h1>Donations</h1>
+            <p>
+              There are various ways you can support the museum. Donations are
+              very welcome and are an important way we keep this museum open and
+              accessible to the whole community.
+            </p>
+            <p>
+              You can also support us by donating items of interest to the
+              museum’s collections. If you have some item or collection that you
+              think others would enjoy, please let us know by contacting our
+              Collections Department and they will be able to assist you.
+            </p>
+          </div>
+          <div class="support">
+            <h2>Volunteer</h2>
+            <p>
+              A number of people volunteer their time and effort to keep the
+              displays in good order and ready for visitors to come and enjoy.
+              Volunteering has its perks including getting to see behind the
+              scenes of a working museum, access to staff-only lectures, and a
+              monthly lunch where all staff and volunteers come together to
+              discuss ideas for future exhibits and strategies for the museum.
+            </p>
+            <p>
+              You can help volunteer in a number of different spheres. Please
+              contact us if you’d like to find out more about how you can get
+              involved.
+            </p>
+          </div>
+          <div class="support">
+            <h1>Internships</h1>
+            <p>
+              Are you interested in working in a museum? Do you enjoy the fun
+              and excitement of sharing the wonders of nature with people?
+            </p>
+            <p>
+              Well you could be just the right person to enjoy an internship at
+              the museum.
+            </p>
+          </div>
+          <div class="get-in-touch">
+            <h3>
+              If any of these descriptions sounds like you, please don't
+              hesitate to get in touch
+            </h3>
+            <a href=""><p>GET IN TOUCH</p></a>
+          </div>
+        </section>
+        <section class="newsletter">
+          <p>
+            Sign up to our Newsletter and be the first to know about Our
+            exciting New stuff:
+          </p>
+          <form action="form-success.php" method="get" class="newsletter">
+            <input
+              id="newsletter"
+              type="text"
+              name="email"
+              placeholder="YOUR EMAIL"
+            />
+            <input id="join" type="submit" name="subscribe" value="SIGN UP" />
+          </form>
+        </section>
+      </div>
+      <footer>
+        <div class="footer-wrapper">
+          <div class="footer-container">
+            <h6>CONNECT:</h6>
+            <ul>
+              <li>
+                <a href="www.facebook.com"
+                  ><span class="fa fa-facebook-f"></span
+                ></a>
+              </li>
+              <li>
+                <a href="www.instagram.com"
+                  ><span class="fa fa-instagram"></span
+                ></a>
+              </li>
+              <li>
+                <a href="www.youtube.com"
+                  ><span class="fa fa-youtube"></span
+                ></a>
+              </li>
+              <li>
+                <a href="www.twitter.com"
+                  ><span class="fa fa-twitter"></span
+                ></a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-container">
+            <h6>HOURS:</h6>
+            <ul>
+              <li>Monday:</li>
+              <li>Tuesday:</li>
+              <li>Wednesday:</li>
+              <li>Thursday:</li>
+              <li>Friday:</li>
+              <li>Saturday:</li>
+              <li>Sunday:</li>
+            </ul>
+            <ul>
+              <li>Closed</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 19:00</li>
+              <li>09:00 - 16:00</li>
+              <li>09:00 - 13:00</li>
+            </ul>
+          </div>
+          <div class="footer-container">
+            <h6>LOCATION:</h6>
+            <p>Nygårdsgaten 112</p>
+            <p>5008 Bergen, Norway</p>
+            <a href="visit.html"
+              ><span class="fa fa-map-marker-alt"><p>Getting Here</p></span></a
+            >
+          </div>
+          <div class="footer-container">
+            <h6>CONTACT & SUPPORT:</h6>
+            <ul>
+              <a href="about_us.html">About Us</a>
+              <a href="visit.html">Facilities</a>
+              <p>Email: contact@cms.com</p>
+              <p>Phone: 500 55 555</p>
+              <p>Community Science Museum 2020</p>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </main>
+  </body>
+</html>
