--- a/visit.html
+++ b/visit.html
@@ -9,15 +9,172 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
     <link rel="stylesheet" href="styles/home.css" />
-    <script>
-      src = "https://kit.fontawesome.com/fbd3401b24.js";
-      crossorigin = "anonymous";
-    </script>
+    <script
+      src="https://kit.fontawesome.com/fbd3401b24.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-</html>
 
-<body>
-  <header></header>
-  <main></main>
-  <footer></footer>
-</body>
+  <body>
+    <header></header>
+
+    <main>
+      <div class="main-wrapper">
+        <section>
+          <div class="info">
+            <h1>Admnission</h1>
+            <p>The entrance is free for all.</p>
+            <p>
+              There are guided tours of the museum that leave every hour. These
+              tours are 70 NOK per person and include a handy printed guide of
+              the museum.
+            </p>
+            <p>
+              If you would like to organise a guided tour for your group of 6 or
+              more people, please contact us to arrange the tour.
+            </p>
+            <p>
+              Tickets may be bought through Our partnership With Ticketmaster,
+              or at the site.
+            </p>
+          </div>
+          <div class="info">
+            <h2>Location</h2>
+            <p>The Museum is Located at:</p>
+            <p>Nygårdsgaten 112</p>
+            <p>5008 Bergen</p>
+            <iframe src="" frameborder="0"></iframe>
+          </div>
+          <div class="info">
+            <ul>
+              <h2>Hours:</h2>
+              <li>Monday:</li>
+              <li>Tuesday:</li>
+              <li>Wednesday:</li>
+              <li>Thursday:</li>
+              <li>Friday:</li>
+              <li>Saturday:</li>
+              <li>Sunday</li>
+            </ul>
+            <ul>
+              <li>Closed</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 19:00</li>
+              <li>09:00 - 16:00</li>
+              <li>09:00 - 13:00</li>
+            </ul>
+          </div>
+        </section>
+        <section>
+          <figure><img src="" alt="" /></figure>
+          <div class="facilities">
+            <h3>Accessibility</h3>
+            <p>The museum has wheelchair accessibility ramps.</p>
+            <p>
+              It also has audio guides and braille display signs for the
+              visually impaired.
+            </p>
+          </div>
+          <div class="facilities">
+            <h3>Food and Drink</h3>
+            <p>
+              There is a café attached to the museum where you can get light
+              lunches, soft drinks, coffee, snacks and more.
+            </p>
+          </div>
+          <figure><img src="" alt="" /></figure>
+          <figure><img src="" alt="" /></figure>
+          <div class="facilities">
+            <p>
+              Our shop offers a range of memorabilia from the museum as well as
+              great gifts and activity packs that allow you to continue to
+              explore science even after you have left the museum.
+            </p>
+          </div>
+        </section>
+        <section class="newsletter">
+          <p>
+            Sign up to our Newsletter and be the first to know about Our
+            exciting New stuff:
+          </p>
+          <form action="form-success.php" method="get" class="newsletter">
+            <input
+              id="newsletter"
+              type="text"
+              name="email"
+              placeholder="YOUR EMAIL"
+            />
+            <input id="join" type="submit" name="subscribe" value="SIGN UP" />
+          </form>
+        </section>
+      </div>
+    </main>
+
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-container">
+          <h6>CONNECT:</h6>
+          <ul>
+            <li>
+              <a href="www.facebook.com"
+                ><span class="fa fa-facebook-f"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.instagram.com"
+                ><span class="fa fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+            </li>
+            <li>
+              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>HOURS:</h6>
+          <ul>
+            <li>Monday:</li>
+            <li>Tuesday:</li>
+            <li>Wednesday:</li>
+            <li>Thursday:</li>
+            <li>Friday:</li>
+            <li>Saturday:</li>
+            <li>Sunday:</li>
+          </ul>
+          <ul>
+            <li>Closed</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 19:00</li>
+            <li>09:00 - 16:00</li>
+            <li>09:00 - 13:00</li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>LOCATION:</h6>
+          <p>Nygårdsgaten 112</p>
+          <p>5008 Bergen, Norway</p>
+          <a href="visit.html"
+            ><span class="fa fa-map-marker-alt"><p>Getting Here</p></span></a
+          >
+        </div>
+        <div class="footer-container">
+          <h6>CONTACT & SUPPORT:</h6>
+          <ul>
+            <a href="about_us.html">About Us</a>
+            <a href="visit.html">Facilities</a>
+            <p>Email: contact@cms.com</p>
+            <p>Phone: 500 55 555</p>
+            <p>Community Science Museum 2020</p>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
